<resources>
    <string name="app_name">Peka</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">SUDAH PUNYA AKUN?</string>
    <string name="masuk">MASUK</string>
    <string name="masuk_dengan_email">MASUK DENGAN EMAIL</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="parenting_image">Parenting Image</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="subtitle_on_boarding_1">Kalau Anak Anda adalah hal penting untuk Anda, lalu apa yang sudah Anda lakukan ? </string>
    <string name="title_on_boarding_1">Seberapa penting makna Anak Anda ?</string>
    <string name="title_on_boarding_2">Tanya diri sendiri, apakah Anak Anda jadi prioritas utama ?</string>
    <string name="subtitle_on_boarding_2">Jika Anda sepakat bahwa anak adalah hal utama, lalu benarkah Anda sudah mengutamakan mereka ?</string>
    <string name="title_on_boarding_3">Tingkatkan Pengetahuanmu</string>
    <string name="subtitle_on_boarding_3">Gunakan journal PEKA untuk mengetahui lebih dalam Modern Parenting Dynamics</string>
    <string name="mulai_kuisioner">Penasaran dengan parenting stylemu?<br /> Cek disini</string>

    <string name="parenting_motivation_1">Jangan lupa berkomunikasi dengan anakmu hari ini</string>
    <string name="parenting_motivation_2">Selalu pestikan bahwa anakmu merasakan kasih sayang orang tua</string>
    <string name="daily_parenting_motivation">Daily Parenting Motivation</string>
    <string name="app_name_stand_for">Peduli Karakter Anak Indonesia</string>
    <string name="konsultasi_dengan_psikolog">Konsultasi dengan psikolog</string>
    <string name="subtitle_go_premium">Konsultasi one-to-one dengan psikolog langsung di aplikasi</string>
    <string name="beli_paket">Beli Paket Sekarang<br /> Hanya 160.000/minggu</string>

    <string-array name="parenting_motivation">
        <item>@string/parenting_motivation_1</item>
        <item>@string/parenting_motivation_2</item>
    </string-array>
    <string name="keluar">Keluar</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="Profile">Profile</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="new_password_confirm">Konfirmasi Password Baru</string>
    <string name="discovery">Discovery</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="video">Video</string>
    <string name="articles">Articles</string>
    <string name="firs_name">First Name</string>
    <string name="firs_name_dummy">Miranda</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_dummy">Purmodinata</string>
    <string name="email_dummmy">mirandaPurmodinata@gmail.com</string>
    <string name="kami_memanggilmu">Kami memanggilmu?</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="splash_subtitle">Ribuan orang tua sudah menggunakan PEKA sebagai langkah awal mereka menjadi orang tua yang baik</string>
    <string name="splash_title">Mulai langkahmu menjadi Orang Tua yang baik sekarang</string>
    <string name="about_us">PEKA (Peduli Karakter Anak Indonesia) - Aplikasi ini dibuat oleh Tim B21-CAP0039 atau Tim Pinus sebagai tugas akhir dari Bangkit Academy yang biasa disebut sebagai Capstone Project. </string>
    <string name="about_us_2">Tim Pinus itu sendiri terdiri dari 6 mahasiswa yang berasal dari 3 universitas yaitu, Universitas Bina Nusantara (Maikel dan Maikel), Universitas Islam Negri Sultan Syarif Kasim Riau (Alfandi), serta Politeknik Caltex Riau (Aziz, Dea, dan Marya). </string>
    <string name="meet_the_team">Meet The Team</string>
    <string name="dea">Dea</string>
    <string name="aziz">Aziz</string>
    <string name="mobile_development">Android Developer</string>
    <string name="akun">Akun</string>
    <string name="alfandi">Alfandi</string>
    <string name="marya">Marya</string>
    <string name="william">William</string>
    <string name="maikel">Maikel</string>
    <string name="copyright">&#169; 2021 All Rights Reserved Terms of Use and Privacy Policy by PINUS</string>
    <string name="machine_learning_engineer">Machine Learning Engineer</string>
    <string name="cloud_computing_engineer">Cloud Computing Engineer</string>
    <string name="exit">Keluar</string>
    <string name="exit_confirm">Yakin ingin keluar?</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="simpan">Simpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conseling">Konseling</string>
    <string name="desc_authoration">\t\tPola pengasuhan ini menetapkan aturan atau perilaku yang dituntut untuk diikuti secara kaku dan tidak boleh dipertanyakan.
        \n
        \nCiri - Ciri :
        \n1. Orang tua suka menghukum secara fisik.
        \n2. Orang tua cenderung bersikap mengomando (mengharuskan atau memerintah anak untuk melakukan sesuatu tanpa kompromi).
        \n3. Bersikap kaku.
        \n4. Orang tua cenderung emosional dan bersikap menolak
    </string>
    <string name="desc_authorative">\t\tPola pengasuhan ini menekankan pada individualitas anak, mendorong anak agar belajar mandiri, namun orang tua tetap memegang kendali atas anak.
        \n
        \nCiri - Ciri :
        \n1. Orang tua bersikap realistis terhadap kemampuan anak, tidak berharap yang berlebihan yang melampaui kemampuan anak.
        \n2. Orang tua memberikan kebebasan kepada anak untuk memilih dan melakukan suatu tindakan.
        \n3. Bersikap responsif terhadap kemampuan anak.
        \n4. Mendorong anak untuk menyatakan pendapat atau pertanyaan.
        \n5. Memberikan penjelasan tentang dampak perbuatan baik dan buruk.
        \n6. Menghargai setiap keberhasilan yang diperoleh anak.
    </string>
    <string name="desc_permissive">\t\tPola asuh ini merupakan pengasuhan tanpa penerapan disiplin pada anak.
        \n
        \nCiri - Ciri :
        \n1. Orang tua tidak menegur atau memperingatkan anak apabila anak sedang dalam bahaya dan sangat sedikit bimbingan yang diberikan oleh mereka.
        \n2. Orang tua memberikan kebebasan kepada anak untuk menyatakan dorongan atau keinginannya.
        \n3. Orang tua tidak pernah menegur atau tidak berani menegur perilaku anak, meskipun perilaku tersebut sudah keterlaluan atau diluar batas kewajaran.
    </string>
    <string name="threat_authoration">\t\tPola asuh ini cenderung menjadikan anak menjadi kurang terbuka kepada orang tua, menarik diri, penentang norma, penakut dan tidak memiliki inisiatif karena orang tidak membuka ruang diskusi terhadap anak.
        Hal ini menyebabkan tuntutan dari orang tua tidak mendapatkan titik temu dengan kehendak anak untuk melakukan suatu tindakan dalam hidupnya dan Menunjukkan keterampilan sosial yang buruk, tingkat harga diri yang rendah dan tingkat depresi yang tinggi.
        \n\n\t\tDampak lainnya pola asuh otoriter terhadap perkembangan anak lainnya, yakni dapat membuat emosi anak meledak-ledak, hubungan interpersonal (dengan orang lain) yang kurang baik, dan cenderung menjadi pribadi yang otoriter di kemudian hari.
        Bahkan, anak-anak yang terpapar gaya pengasuhan seperti ini berisiko tidak berprestasi di sekolah.</string>
    <string name="threat_authorative">\t\tPola asuh ini merupakan pola asuh yang paling relevan dan dapat menimbulkan keserasian terhadap tuntutan orang tua dan kehendak anak untuk melakukan tindakan.
        Karena dalam pola asuh otoritatif menghendaki adanya diskusi sehingga anak menjadi terbuka, anak memiliki inisiatif untuk bertindak dan terjadi nya koordinasi antara orang tua dan anak.
        Hal ini jelas dapat membangun relasi yang baik antara orang tua dan anak.</string>
    <string name="threat_permissive">\t\tPola asuh ini menghendaki anak untuk melakukan apapun tanpa adanya tuntutan orang tua terhadap anak.
        Karena pola asuh permisif ini menghendaki anak untuk melakukan apapun maka anak akan terbiasa untuk menentukan apapun keputusannya sendiri, dalam hal ini anak menjadi egois.
        Karena anak dibiarkan melakukan apapun, anak menjadi tidak mendapatkan bimbingan mengenai peraturan sosial dari orang tua.
        Hal ini akan membuat anak terbiasa untuk melakukan pelanggaran terhadap norma sosial yang ada seperti contoh perilaku.
        Pengguna narkoba, perilaku yang salah di sekolah, dan orientasi yang kurang positif terhadap perguruan tinggi.
        Sehingga pola asuh permisif juga dikaitkan dengan harga diri yang rendah dan orientasi motivasi ekstrinsik di kalangan remaja.
        \n\n\t\tDampak pola asuh permisif lainnya  terhadap perkembangan anak, yakni membuat anak sulit menyesuaikan diri dengan lingkungan, menuntut, cenderung memberontak dan motivasi belajar yang kurang.
        Namun, dalam jangka panjang, anak menjadi bingung karena tidak terbiasa dengan batasan yang ada</string>
    <string name="parenting_style_impact">Berikut dampak yang ditimbulkan oleh pola asuh ini:</string>
    <string name="go_premium">Konsultasi dengan psikolog untuk informasi selengkapnya</string>
    <string name="desc_go_premium">Konseling dijamin efektif • Proses yang praktis • Biayanya terjangkau
        \n\nBicarakan isi hatimu, dapatkan pencerahan atas masalahmu. Privasi dan kerahasiaanmu aman dalam lindungan Kode Etik Psikologi.
        \n\n*Privasi dan kerahasiaanmu aman dalam lindungan Kode Etik Psikologi.
        \n**Jaminan Efektivitas Konseling: Apabila konseling dengan kami ternyata tidak membantu, kami akan mengembalikan uangmu sepenuhnya.
    </string>
    <string name="no_internet">Menunggu Koneksi Internet</string>
</resources>